# android_amvk

./: .gitignore
app/: build.gradle  key.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/spv/: deferred.comp.spv  deferred.frag.spv  deferred.vert.spv  fullscreen_quad.frag.spv  model.frag.spv  model.vert.spv  point_light.frag.spv  point_light.vert.spv  skinned.frag.spv  skinned.vert.spv  tquad.vert.spv
app/src/main/cpp/: CMakeLists.txt  amvk.cpp
app/src/main/cpp/inc/: .engine.h.swp  .macro.h.swo  .macro.h.swp  .swapchain_manager.h.swp  .window.h.swp  buffer_helper.h  buffer_info.h  buffer_manager.h  camera.h  cmd_pass.h  descriptor_manager.h  device_manager.h  device_queue_indices.h  engine.h  file_manager.h  g_buffer.h  image_info.h  input_manager.h  lights.h  macro.h  model.h  pipeline_cache.h  pipeline_creator.h  pipeline_manager.h  quad.h  renderer.h  scene_lights.h  shader_manager.h  skinned.h  state.h  state_manager.h  swap_chain_desc.h  swapchain_manager.h  task_manager.h  texture_data.h  texture_manager.h  timer.h  tquad.h  util.h  vulkan.h  (+8 more)
app/src/main/cpp/inc/creator/: buffer_helper.h  descriptor_creator.h  descriptor_manager.h  image_helper.h  pipeline_builder.h  pipeline_creator.h  shader_creator.h
app/src/main/cpp/inc/shape/: anim_node.h  fullscreen_quad.h  model.h  point_light.h  quad.h  skinned.h  sphere.h  tquad.h
app/src/main/cpp/lib/assimp-master/: .assimp_script.sh.swp  CMakeLists.txt  assimp_script.sh
app/src/main/cpp/lib/assimp-master/include/assimp/port/AndroidJNI/: AndroidJNIIOSystem.h
app/src/main/cpp/lib/ndk_helper/: CMakeLists.txt
app/src/main/cpp/lib/vulkan_wrapper/: CMakeLists.txt  vulkan_wrapper.cpp  vulkan_wrapper.h
app/src/main/cpp/src/: .engine.cpp.swp  .file_manager.cpp.swp  .main.cpp.swp  .swapchain_manager.cpp.swp  .window.cpp.swp  anim_node.cpp  buffer_helper.cpp  buffer_info.cpp  camera.cpp  cmd_pass.cpp  device_manager.cpp  device_queue_indices.cpp  engine.cpp  file_manager.cpp  g_buffer.cpp  image_info.cpp  input_manager.cpp  lights.cpp  main.cpp  model.cpp  pipeline_cache.cpp  pipeline_manager.cpp  quad.cpp  renderer.cpp  scene_lights.cpp  skinned.cpp  swap_chain_desc.cpp  swapchain_manager.cpp  task_manager.cpp  texture_data.cpp  texture_manager.cpp  timer.cpp  vulkan_image_info.cpp  vulkan_manager.cpp  vulkan_render_manager.cpp  vulkan_render_pass_creator.cpp  vulkan_utils.cpp  window.cpp
app/src/main/cpp/src/shape/: fullscreen_quad.cpp  model.cpp  point_light.cpp  skinned.cpp  sphere.cpp  tquad.cpp
app/src/main/java/vulkan/melnichuk/al/amvk/: MainNativeActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/shaders/: deferred.comp  deferred.frag  deferred.vert  fullscreen_quad.frag  model.frag  model.vert  point_light.frag  point_light.vert  quad.frag  quad.vert  skinned.frag  skinned.vert  tquad.vert
gradle/wrapper/: gradle-wrapper.properties
